# openvort

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .venv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  migrate_zentao_bug_iterations.py  migrate_zentao_bugs.py  pyproject.toml  start_web.py  test.md
.cursor/: mcp.json
.cursor/commands/: operate.md
.cursor/plans/: ai-coding.md  virtual-employee.md  vortgit.md  vortsketch.md
.cursor/rules/: chinese-language.mdc  debug-with-logs-first.mdc  frontend-style-consistency.mdc
.cursor/skills/doubao-browser-chat/: SKILL.md
.cursor/skills/openvort-architecture/: SKILL.md
.cursor/skills/openvort-backend-restart/: SKILL.md
.cursor/skills/openvort-chat-test/: SKILL.md
.cursor/skills/openvort-dialog-form/: SKILL.md
.cursor/skills/openvort-frontend/: SKILL.md
.cursor/skills/openvort-official-docs/: SKILL.md
.cursor/skills/openvort-overview/: SKILL.md
.cursor/skills/openvort-page-extraction/: SKILL.md
.cursor/skills/openvort-pagination/: SKILL.md
.cursor/skills/openvort-plans/: SKILL.md
.cursor/skills/openvort-services/: SKILL.md
.cursor/skills/vortflow-component-architecture/: ARCHITECTURE.md  SKILL.md
.github/workflows/: docker-image.yml  sandbox-images.yml
.windsurf/rules/: chinese-language.md
.windsurf/workflows/: use-cursor-skills.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_chat_session_target.py  003_skills_system.py  004_member_position.py
coding-sandbox/: Dockerfile
data/: identity.md
deploy/relay/: README.md  relay.py
deploy/relay/node/: README.md  relay.js
deploy/relay/python/: relay.py  requirements.txt
docker/browser-sandbox/: Dockerfile  supervisord.conf
docker/coding-sandbox/: Dockerfile
docker/openclaw-worker/: Dockerfile  entrypoint.sh  openclaw.json
docker/worker-sandbox/: Dockerfile
docs/: architecture.md  open-source-audit.md  roadmap.md  system-overview.md  virtual-employee-design.md  vort-ui-shadcn-plan.md
docs/kb-seeds/: tigshop.md
scripts/: seed_demo_org.py  seed_kb_tigshop.py  seed_vortflow_test_data.py  seed_vortgit_repos.py  start_web.py
src/openvort/: __init__.py  __main__.py  cli.py
src/openvort/auth/: __init__.py  decorators.py  models.py  service.py
src/openvort/auth/prompts/: admin.md  guest.md  manager.md  member.md
src/openvort/channels/: __init__.py
src/openvort/channels/dingtalk/: __init__.py  channel.py  sync.py  tools.py
src/openvort/channels/feishu/: __init__.py  api.py  callback.py  channel.py  crypto.py  sync.py  tools.py
src/openvort/channels/openclaw/: __init__.py  channel.py
src/openvort/channels/wecom/: __init__.py  api.py  callback.py  channel.py  crypto.py  employee_bot.py  sync.py  think_parser.py  tools.py
src/openvort/cli/: __init__.py  agent.py  channels.py  coding.py  contacts.py  doctor.py  inspect.py  marketplace.py  pairing.py  service.py  skills.py
src/openvort/config/: __init__.py  config_service.py  settings.py
src/openvort/contacts/: __init__.py  avatar.py  matcher.py  models.py  plugin.py  resolver.py  service.py  sync.py
src/openvort/contacts/tools/: __init__.py  bind_identity.py  match_suggestions.py  resolve_match.py  search_member.py  sync_contacts.py
src/openvort/core/: __init__.py  agent.py  bootstrap.py  browser_env.py  chat_message.py  coding_env.py  commands.py  context.py  dispatcher.py  docker_executor.py  events.py  group_context.py  inbox.py  llm.py  node_tools.py  openclaw_executor.py  openclaw_node.py  openclaw_tool.py  openclaw_ws.py  remote_executor.py  remote_node.py  remote_work_tool.py  router.py  schedule_service.py  scheduler.py  session.py  session_tools.py  setup.py  task_runner.py  updater.py
src/openvort/core/engine/: __init__.py  agent.py  context.py  router.py  session.py
src/openvort/core/execution/: __init__.py  browser_env.py  coding_env.py  docker_executor.py  node_tools.py  remote_node.py  sandbox.py
src/openvort/core/messaging/: __init__.py  commands.py  dispatcher.py  group.py  group_context.py  pairing.py
src/openvort/db/: __init__.py  engine.py  models.py
src/openvort/marketplace/: __init__.py  client.py  installer.py
src/openvort/plugin/: __init__.py  api.py  base.py  loader.py  registry.py  slots.py
src/openvort/plugins/: __init__.py
src/openvort/relay/: __init__.py  server.py  store.py
src/openvort/skill/: __init__.py  directories.py  discovery.py  importer.py  loader.py  tools.py
src/openvort/skills/: __init__.py
src/openvort/tools/: __init__.py
src/openvort/utils/: logging.py
src/openvort/web/: __init__.py  app.py  auth.py  deps.py  mcp_auth.py  mcp_server.py  upload_utils.py  webhooks.py  ws.py
tests/: TEST_REPORT_WEB_CHAT_SSE.md  conftest.py  test_agent.py  test_coding_env.py  test_dingtalk_channel.py  test_feishu_streaming.py  test_feishu_voice.py  test_llm.py  test_remote_work_tool.py  test_simple_coding.py  test_tool_progress.py  test_web_chat_coding_task.py  test_web_chat_sse.py
tests/test_wecom/: test_channel.py
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.vue  components.d.ts  main.ts
web/src/api/: ai-employees.ts  auth.ts  channel-bots.ts  chat.ts  index.ts  jenkins.ts  knowledge.ts  members.ts  notifications.ts  plugins.ts  profile.ts  reports.ts  schedules.ts  settings.ts  skills.ts  uploads.ts  vortcert.ts  vortflow.ts  vortgit.ts  vortsketch.ts
web/src/components/: ActiveTaskIndicator.vue  BrowserPreview.vue  DockerTerminal.vue
web/src/composables/: useAiFloat.ts  useNotification.ts  useWebSocket.ts
web/src/hooks/: index.ts  useCrudPage.ts  useDialogForm.ts  useDirtyCheck.ts  useInlineAi.ts  useMediaQuery.ts
web/src/layouts/: BasicLayout.vue  BlankLayout.vue
web/src/router/: index.ts  menus.ts  pluginRoutes.ts
web/src/stores/: index.ts
web/src/types/: plugin.ts
web/src/utils/: format.ts  request.ts  zod-zh.ts
(+574 files in other folders)
