[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvort"
version = "0.7.1"
description = "Open-source AI-powered R&D workflow engine — interact with AI agents via IM or Web to automate project management, code repositories, and team collaboration"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Yang Qiang", email = "openvort@openvort.com" },
]
keywords = ["ai", "workflow", "devops", "wecom", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anyio>=4.5,<5",
    "anthropic>=0.50",
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "lxml>=5.0",
    "pymysql>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sse-starlette>=2.0",
    "websockets>=13.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9",
    "dashscope>=1.20",
    "pgvector>=0.3",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "lark-oapi>=1.4",
    "mcp>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
openvort = "openvort.cli:main"

[project.entry-points."openvort.channels"]
wecom = "openvort.channels.wecom:WeComChannel"
dingtalk = "openvort.channels.dingtalk:DingTalkChannel"
feishu = "openvort.channels.feishu:FeishuChannel"
openclaw = "openvort.channels.openclaw:OpenClawChannel"

[project.entry-points."openvort.plugins"]
zentao = "openvort.plugins.zentao:ZentaoPlugin"
contacts = "openvort.contacts.plugin:ContactsPlugin"
vortflow = "openvort.plugins.vortflow:VortFlowPlugin"
vortgit = "openvort.plugins.vortgit:VortGitPlugin"
jenkins = "openvort.plugins.jenkins:JenkinsPlugin"
schedule = "openvort.plugins.schedule:SchedulePlugin"
report = "openvort.plugins.report:ReportPlugin"
system = "openvort.plugins.system:SystemPlugin"
browser = "openvort.plugins.browser:BrowserPlugin"
knowledge = "openvort.plugins.knowledge:KnowledgePlugin"
vortsketch = "openvort.plugins.vortsketch:VortSketchPlugin"

[project.urls]
Homepage = "https://github.com/openvort/openvort"
Repository = "https://github.com/openvort/openvort"
Issues = "https://github.com/openvort/openvort/issues"
Documentation = "https://github.com/openvort/openvort#readme"
Changelog = "https://github.com/openvort/openvort/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/openvort"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
